[package]
authors = ["{{authors}}"]
edition = "2018"
description = "Hardware Abstraction Layer implementation for Daisy boards"
keywords = ["cortex-m", "stm32h7xx", "stm32h750", "hal", "daisy"]
readme = "README.md"
name = "{{project-name}}"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/mtthw-meyer/libdaisy-rust.git"
documentation = "https://docs.rs/libdaisy"
exclude = [".gitignore"]

[dependencies]
libdaisy = "0.1.0"
cortex-m = "0.6.2"
cortex-m-rtic = "0.5.6"
log = "0.4.11"
stm32h7xx-hal = { version = "0.9.0", features = ["stm32h750v","rt","fmc"] }
panic-halt = "0.2.0"

# this lets you use `cargo fix`!
# [[bin]]
# name = "libdaisy-rust"
# test = false
# bench = false

# [profile.dev]
# codegen-units = 1 # better optimizations
# debug = true # symbols are nice and they don't increase the size in flash
# incremental = false
# opt-level = "s" # optimize for binary size

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size in flash
lto = true # better optimizations
opt-level = "s" # optimize for binary size
